# Progetto_Laboratorio_Programmazione-Note_App

./: CMakeLists.txt  Collezione.cpp  Collezione.h  Controller.cpp  Controller.h  Displayer.cpp  Displayer.h  Executive.cpp  Executive.h  Notes.cpp  Notes.h  Observer.h  README.md  Subject.h  main.cpp
Progetto LabProg - Note/: CMakeLists.txt  Collezione.cpp  Collezione.h  Notes.cpp  Notes.h  main.cpp
test/: CMakeLists.txt  CollezioneFixture.cpp  CollezioneTest.cpp  DisplayerTest.cpp  ExecutiveTest.cpp  NotesTest.cpp
